--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.4",
     "vue": "^3.0.0"
   },
   "devDependencies": {
